ServiceEntry-and-WorkloadEntry/03-WorkloadEntry-Subsets/04-virtualservice-weighted-based-routing.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx-external
spec:
  hosts:
  - nginx.magedu.com
  http:
  - name: default
    route:
    - destination:
        host: nginx.magedu.com
        subset: v26
      weight: 5
    - destination:
        host: nginx.magedu.com
        subset: v25
      weight: 95
