ServiceEntry-and-WorkloadEntry/03-WorkloadEntry-Subsets/05-virtualservice-headers-based-routing.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx-external
spec:
  hosts:
  - nginx.magedu.com
  http:
  - name: falut-injection
    match:
    - headers:
        x-canary:
          exact: "true"
    route:
    - destination:
        host: nginx.magedu.com
        subset: v26
    fault:
      delay:
        percentage:
          value: 5
        fixedDelay: 2s
  - name: default
    route:
    - destination:
        host: nginx.magedu.com
        subset: v25
    fault:
      abort:
        percentage:
          value: 5
        httpStatus: 555
